# docker-compose-ex

./: Makefile  README.md  docker-compose.yml  test-apis.sh
app1/: Dockerfile  main.py  pyproject.toml
app1/templates/: index.html
app2/: Dockerfile  main.py  pyproject.toml
app3/: Dockerfile  main.py  pyproject.toml
