[tool.poetry]
name = "app1"
version = "0.1.0"
description = "FastAPI health check application"
authors = ["Your Name gh.pascon@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.6"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"