[tool.poetry]
name = "app3"
version = "0.1.0"
description = "Periodic data sender service"
authors = ["Your Name gh.pascon@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"